--- a/Imposto.Core/Imposto.Core.csproj
+++ b/Imposto.Core/Imposto.Core.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Domain\Pedido.cs" />
     <Compile Include="Domain\PedidoItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Interfaces\INotaFiscalService.cs" />
     <Compile Include="Service\NotaFiscalService.cs" />
   </ItemGroup>
   <ItemGroup />
