--- a/Imposto.Core/Imposto.Core.csproj
+++ b/Imposto.Core/Imposto.Core.csproj
@@ -40,7 +40,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data\NotaFiscalRepository.cs" />
     <Compile Include="Domain\Estados.cs" />
     <Compile Include="Domain\NotaFiscal.cs" />
     <Compile Include="Domain\NotaFiscalItem.cs" />
@@ -50,7 +49,9 @@
     <Compile Include="Interfaces\INotaFiscalService.cs" />
     <Compile Include="Service\NotaFiscalService.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Data\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
